@@ -4,6 +4,7 @@ Revision history for Cache
  - updated documentation on expiration units
  - modified the quoting of the untainted path regex
  - fixed the duplicated get_keys in NullCache
+ - applied patch to ensure conistent state if the filesystem fills up
 
 1.01 2002-04-14-01-30
  - released version 1.01
